--- a/index.html
+++ b/index.html
@@ -3,9 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mon Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em;
+        }
+
+        section {
+            padding: 2em;
+        }
+
+        h1, h2, p {
+            margin-bottom: 1em;
+        }
+
+        .project {
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 1em;
+            margin-bottom: 1em;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    
+    <header>
+        <h1>Mon Portfolio</h1>
+        <p>Bienvenue sur mon portfolio en ligne</p>
+    </header>
+
+    <section>
+        <h2>À propos de moi</h2>
+        <p>Je suis un développeur passionné, spécialisé dans les technologies web.</p>
+    </section>
+
+    <section>
+        <h2>Mes Projets</h2>
+        <div class="project">
+            <h3>Projet 1</h3>
+            <p>Description du projet 1.</p>
+        </div>
+        <div class="project">
+            <h3>Projet 2</h3>
+            <p>Description du projet 2.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>Contactez-moi : contact@example.com</p>
+    </footer>
 </body>
 </html>
