--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 </head>
 <body>
     <header>
-        <h1>Mon Portfolio</h1>
-        <p>Bienvenue sur mon portfolio en ligne</p>
+        <h1>Tom PEREZ LE TIEC</h1>
+        <h2>Mon Portfolio</h2>
     </header>
 
     <section>
         <h2>À propos de moi</h2>
-        <p>Je suis un développeur passionné, spécialisé dans les technologies web.</p>
+        <p>Je suis un étudiant en 2ème année du cycle préparatoire au CESI, en mineur informatique</p>
     </section>
 
     <section>
@@ -69,7 +69,7 @@
     </section>
 
     <footer>
-        <p>Contactez-moi : contact@example.com</p>
+        <p>Contactez-moi : tomperezletiec@gmail.com</p>
     </footer>
 </body>
 </html>
